--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,8 @@ input {
 }
 
 button {
-  border-radius: 10px;
+  margin-right: 4px;
+  border-radius: 8px;
   border: none;
   padding: 4px 16px;
 }
@@ -19,6 +20,10 @@ button:hover {
   background-color: #ff7fff;
   color: #fff;
   cursor: pointer;
+}
+
+li {
+  margin-right: 8px;
 }
 
 .input-area {
@@ -46,4 +51,18 @@ button:hover {
   padding: 8px;
   margin: 8px;
   border-radius: 3px;
+}
+
+.title {
+  text-align: center;
+  margin-top: 4px;
+  font-weight: bold;
+  color: #666;
+}
+
+.list-row {
+  display: flex;
+  align-items: center;
+  padding-bottom: 4px;
+  padding-right: 4px;
 }
